--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Nome:</strong>
-  <%= @client.nome %>
+  <strong>Name:</strong>
+  <%= @client.name %>
 </p>
 
 <%= link_to 'Edit', edit_client_path(@client) %> |
