--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,9 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @client.name %>
+  <strong><%= @client.name %></strong><br>
+  <strong><%= @collection.name %></strong>
 </p>
 
-<%= link_to 'Edit', edit_client_path(@client) %> |
-<%= link_to 'Back', clients_path %>
+<% @products.each do |product| %>
+  <p><%= product.name %></p>
+  <p>Amount: <%= humanized_money_with_symbol(product.price) %></p>
+<% end %>
